Wrap around long tags
Only applies when showing them in a panel's body.

Signed-off-by: Roberto Rosario <roberto.rosario@mayan-edms.com>

--- a/mayan/apps/tags/templates/tags/app/head.html
+++ b/mayan/apps/tags/templates/tags/app/head.html
@@ -1,4 +1,8 @@
 <style>
+    .panel-item .panel-body .label-tag {
+        white-space: normal;
+    }
+
     .tag-container .label {
         margin-right: 2px;
     }
