--- a/mayan/apps/documents/templates/documents/forms/widgets/document_page_carousel.html
+++ b/mayan/apps/documents/templates/documents/forms/widgets/document_page_carousel.html
@@ -1,7 +1,7 @@
 {% load i18n %}
 
 <div class="full-height scrollable" data-height-difference=230 id="carousel-container">
-    {% for document_page in widget.value.pages.all %}
+    {% for document_page in widget.value.pages_valid.all %}
         <div class="carousel-item">
             <a href="{% url 'documents:document_page_view' document_page.pk %}">
                 {% with 'lazy-load-carousel' as image_classes %}
@@ -13,11 +13,11 @@
                 {% endwith %}
             </a>
             <div class="carousel-item-page-number">
-                {% blocktrans with document_page.page_number as page_number and widget.value.pages.count as total_pages %}
+                {% blocktrans with document_page.page_number as page_number and widget.value.pages_valid.count as total_pages %}
                     Page {{ page_number }} of {{ total_pages }}
                 {% endblocktrans %}
             </div>
-	</div>
+    </div>
     {% empty %}
         <p>{% trans 'No pages to display' %}</p>
     {% endfor %}
