--- a/mayan/apps/navigation/templates/navigation/generic_subnavigation.html
+++ b/mayan/apps/navigation/templates/navigation/generic_subnavigation.html
@@ -1,7 +1,7 @@
 {% load common_tags %}
 {% load navigation_tags %}
 
-{% if link|common_get_type == "<class 'mayan.apps.navigation.classes.Menu'>" %}
+{% if link.is_new_level %}
     <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="true">
             {% if link.icon_class %}{{ link.icon_class.render }}{% endif %}
@@ -9,6 +9,9 @@
             <span class="caret"></span>
         </a>
         <ul class="dropdown-menu">
+{% endif %}
+
+{% if link.is_container %}
             {% navigation_resolve_menu name=link.name as sub_menus_results %}
             {% for sub_menu_results in sub_menus_results %}
                 {% for link_group in sub_menu_results.link_groups %}
@@ -19,9 +22,15 @@
                     {% endwith %}
                 {% endfor %}
             {% endfor %}
+{% endif %}
+
+{% if link.is_new_level %}
+
         </ul>
     </li>
-{% else %}
+{% endif %}
+
+{% if not link.is_new_level and not link.is_container %}
     {% if as_li %}
         <li class="{% if link.active and li_class_active %}{{ li_class_active }}{% endif %}">
     {% endif %}
