--- a/mayan/apps/tags/templates/tags/app/head.html
+++ b/mayan/apps/tags/templates/tags/app/head.html
@@ -15,6 +15,7 @@
     .label-tag {
         text-shadow: 0px 0px 2px #000;
         box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.5);
+        white-space: normal;
     }
 
     .select2-container--default .select2-selection--multiple .select2-selection__choice .label {
