--- a/mayan/apps/cabinets/templates/cabinets/app/head.html
+++ b/mayan/apps/cabinets/templates/cabinets/app/head.html
@@ -6,6 +6,7 @@
     .label-cabinet a {
         color: black;
         text-decoration: none !important;
+        white-space: normal;
     }
 
     #jstree {
