--- a/mayan/apps/dashboards/templates/dashboards/numeric_widget.html
+++ b/mayan/apps/dashboards/templates/dashboards/numeric_widget.html
@@ -27,7 +27,7 @@
             <a href="{{ link }}">
                 <div class="panel-footer">
                     <span class="pull-left">{% trans 'View details' %}</span>
-                    <span class="pull-right"><i class="fa fa-external-link-alt"></i></span>
+                    <span class="pull-right">{% appearance_icon_render link_icon_class %}</span>
                     <div class="clearfix"></div>
                 </div>
             </a>
