Add related actions menu
Signed-off-by: Roberto Rosario <roberto.rosario@mayan-edms.com>

--- a/mayan/apps/appearance/templates/appearance/base.html
+++ b/mayan/apps/appearance/templates/appearance/base.html
@@ -80,7 +80,7 @@
                 {% include 'appearance/calculate_form_title.html' %}
 
                 {# action menu #}
-                {% navigation_resolve_menus names='object,secondary' sort_results=True as action_menus_link_results %}
+                {% navigation_resolve_menus names='object,secondary,related' sort_results=True as action_menus_link_results %}
                 {% if action_menus_link_results %}
                     <div class="pull-right btn-group" id="menu-actions">
                         <button aria-expanded="true" class="btn btn-danger btn-sm dropdown-toggle" data-toggle="dropdown" type="button">
