--- a/mayan/apps/appearance/templates/appearance/base.html
+++ b/mayan/apps/appearance/templates/appearance/base.html
@@ -1,6 +1,7 @@
 {% load i18n %}
 {% load static %}
 
+{% load appearance_tags %}
 {% load authentication_tags %}
 {% load common_tags %}
 {% load navigation_tags %}
@@ -21,6 +22,10 @@
 </script>
 
 {% block stylesheets %}{% endblock %}
+
+<style>
+    {% appearance_get_user_theme_stylesheet user=request.user %}
+</style>
 
 {% if appearance_type == 'plain' %}
     {% block content_plain %}{% endblock %}
