--- a/mayan/apps/dynamic_search/templates/dynamic_search/search_box.html
+++ b/mayan/apps/dynamic_search/templates/dynamic_search/search_box.html
@@ -42,7 +42,7 @@
                             {% if setting_disable_simple_search == False %}
                                 <button class="btn btn-default" type="submit">{% trans 'Search' %}</button>
                                 {% endif %}
-                            <a class="btn btn-primary" href="" id="btnSearchAdvanced" >                {% if setting_disable_simple_search == False %}{% trans 'Advanced' %}{% else %}{% trans 'Advanced search' %}{% endif %}</a>
+                            <a class="btn btn-primary" href="" id="btnSearchAdvanced">{% if setting_disable_simple_search == False %}{% trans 'Advanced' %}{% else %}{% trans 'Advanced search' %}{% endif %}</a>
                         </span>
                     </div>
                 </div>
@@ -61,9 +61,9 @@
     jQuery(document).ready(function() {
         var $selectSearchModel = $('#selectSearchModel');
         var $btnSearchAdvanced = $('#btnSearchAdvanced');
-        $btnSearchAdvanced.attr('href', "{% url 'search:search_advanced' %}?_search_model_name=" + $selectSearchModel.val());
+        $btnSearchAdvanced.attr('href', "{% url 'search:search_advanced' %}?{% search_get_search_model_name_query_variable %}=" + $selectSearchModel.val());
         $selectSearchModel.change(function () {
-            $btnSearchAdvanced.attr('href', "{% url 'search:search_advanced' %}?_search_model_name=" + $(this).val());
+            $btnSearchAdvanced.attr('href', "{% url 'search:search_advanced' %}?{% search_get_search_model_name_query_variable %}=" + $(this).val());
         });
     });
 </script>
