Labeling: Add labels to search form elements Improve Lighthouse accessibility score from 84 to 91.

--- a/mayan/apps/dynamic_search/templates/dynamic_search/search_box.html
+++ b/mayan/apps/dynamic_search/templates/dynamic_search/search_box.html
@@ -20,7 +20,7 @@
                 {% else %}
                     <div class="col-sm-8">
                 {% endif %}
-                    <select class="form-control" id="selectSearchModel" name="_search_model_name">
+                    <select class="form-control" id="selectSearchModel" name="_search_model_name" aria-label="Model selection for search">
                         {% for search_model in search_models %}
                         {{ search_model.self.get_full_name }}
                             <option {% if search_model.get_full_name == 'documents.Document' %}selected{% endif %} value="{{ search_model.get_full_name }}">{{ search_model }}</option>
@@ -36,7 +36,7 @@
 
                     <div class="input-group">
                         {% if setting_disable_simple_search == False %}
-                            <input class="form-control" name="q" placeholder="{% trans 'Search terms' %}" type="text" value="{{ search_terms|default:'' }}">
+                            <input class="form-control" name="q" placeholder="{% trans 'Search terms' %}" type="text" value="{{ search_terms|default:'' }}" aria-label="Search box">
                         {% endif %}
                         <span class="input-group-btn">
                             {% if setting_disable_simple_search == False %}
