Improved Accessibility score by fixing color contract. Score before: 82, after: 84

--- a/mayan/apps/dynamic_search/templates/dynamic_search/search_box.html
+++ b/mayan/apps/dynamic_search/templates/dynamic_search/search_box.html
@@ -40,7 +40,7 @@
                         {% endif %}
                         <span class="input-group-btn">
                             {% if setting_disable_simple_search == False %}
-                                <button class="btn btn-default" type="submit">{% trans 'Search' %}</button>
+                                <button style="color:black" class="btn btn-default" type="submit">{% trans 'Search' %}</button>
                                 {% endif %}
                             <a class="btn btn-primary" href="" id="btnSearchAdvanced" >                {% if setting_disable_simple_search == False %}{% trans 'Advanced' %}{% else %}{% trans 'Advanced search' %}{% endif %}</a>
                         </span>
