--- a/mayan/apps/dashboards/templates/dashboards/numeric_widget.html
+++ b/mayan/apps/dashboards/templates/dashboards/numeric_widget.html
@@ -26,7 +26,7 @@
         {% if link %}
             <a href="{{ link }}">
                 <div class="panel-footer">
-                    <span class="pull-left">{% trans 'View details' %}</span>
+                    <span style="color:black" class="pull-left">{% trans 'View details' %}</span>
                     <span class="pull-right"><i class="fa fa-external-link-alt"></i></span>
                     <div class="clearfix"></div>
                 </div>
