--- a/mayan/apps/appearance/templates/appearance/generic_list_subtemplate.html
+++ b/mayan/apps/appearance/templates/appearance/generic_list_subtemplate.html
@@ -33,18 +33,15 @@
                                                 <span style="white-space: nowrap">
                                                     {% if source_column.is_sortable %}
                                                         <a href="{% navigation_get_sort_field_querystring column=source_column %}">{{ source_column.label }}</a>
-                                                        {% if source_column.get_sort_field == sort_field %}
-                                                            {% if icon_sort %}{{ icon_sort.render }}{% endif %}
-                                                        {% endif %}
+                                                            {% if source_column.get_sort_field == sort_field %}
+                                                                <span class="appearance-list-column-sort-icon">
+                                                                    {% if icon_sort %}{{ icon_sort.render }}{% endif %}
+                                                                </span>
+                                                            {% endif %}
                                                     {% else %}
-                                                        {{ source_column.label }}
+                                                        <span class="appearance-list-column-label">{{ source_column.label }}</span>
                                                     {% endif %}
-
-                                                    {% if source_column.help_text %}
-                                                        <span data-toggle="tooltip" data-placement="bottom" title="{{ source_column.help_text }}">
-                                                        {% appearance_get_icon icon_path='mayan.apps.navigation.icons.icon_source_column_help_text' %}
-                                                        </span>
-                                                    {% endif %}
+                                                    {% include 'appearance/partials/column_help_text.html' %}
                                                 </span>
                                             </th>
                                         {% endif %}
@@ -57,18 +54,15 @@
                                                 <span style="white-space: nowrap">
                                                     {% if source_column.is_sortable %}
                                                         <a href="{% navigation_get_sort_field_querystring column=source_column %}">{{ source_column.label }}</a>
-                                                        {% if source_column.get_sort_field == sort_field %}
-                                                            {% if icon_sort %}{{ icon_sort.render }}{% endif %}
-                                                        {% endif %}
+                                                            {% if source_column.get_sort_field == sort_field %}
+                                                                <span class="appearance-list-column-sort-icon">
+                                                                    {% if icon_sort %}{{ icon_sort.render }}{% endif %}
+                                                                </span>
+                                                            {% endif %}
                                                     {% else %}
-                                                        {{ source_column.label }}
+                                                        <span class="appearance-list-column-label">{{ source_column.label }}</span>
                                                     {% endif %}
-
-                                                    {% if source_column.help_text %}
-                                                        <span data-toggle="tooltip" data-placement="bottom" title="{{ source_column.help_text }}">
-                                                        {% appearance_get_icon icon_path='mayan.apps.navigation.icons.icon_source_column_help_text' %}
-                                                        </span>
-                                                    {% endif %}
+                                                    {% include 'appearance/partials/column_help_text.html' %}
                                                 </span>
                                             </th>
                                         {% endfor %}
