--- a/mayan/apps/appearance/static/appearance/css/base.css
+++ b/mayan/apps/appearance/static/appearance/css/base.css
@@ -436,7 +436,7 @@ a i {
 
 #menu-main {
     display: block;
-    background-color: #1bd83b;
+    background-color: #2c3e50;
     border-right: 1px solid #18bc9c;
     bottom: 0;
     left: -210px;
