Point document to latest document version
Add document version deletion
Add document file properties view
Remove page disabling/enabling
Add more navigation
Remove more code

Signed-off-by: Roberto Rosario <roberto.rosario@mayan-edms.com>

--- a/mayan/apps/documents/templates/documents/forms/widgets/document_file_page_carousel.html
+++ b/mayan/apps/documents/templates/documents/forms/widgets/document_file_page_carousel.html
@@ -1,11 +1,11 @@
 {% load i18n %}
 
 <div class="full-height scrollable" data-height-difference=230 id="carousel-container">
-    {% for document_file_page in widget.value.pages.all %}
+    {% for page in widget.value.pages.all %}
         <div class="carousel-item">
-            <a href="{% url 'documents:document_file_page_view' document_file_page.pk %}">
+            <a href="{% url widget.attrs.target_view page.pk %}">
                 {% with 'lazy-load-carousel' as image_classes %}
-                {% with document_file_page as instance %}
+                {% with page as instance %}
                 {% with widget.attrs.height as display_height %}
                     {% include 'documents/forms/widgets/document_file_page_image.html' %}
                 {% endwith %}
@@ -13,7 +13,7 @@
                 {% endwith %}
             </a>
             <div class="carousel-item-page-number">
-                {% blocktrans with document_file_page.page_number as page_number and widget.value.pages.count as total_pages %}
+                {% blocktrans with page.page_number as page_number and widget.value.pages.count as total_pages %}
                     Page {{ page_number }} of {{ total_pages }}
                 {% endblocktrans %}
             </div>
