--- a/mayan/apps/appearance/templates/appearance/base.html
+++ b/mayan/apps/appearance/templates/appearance/base.html
@@ -6,6 +6,7 @@
 {% load common_tags %}
 {% load navigation_tags %}
 {% load smart_settings_tags %}
+{% load templating_tags %}
 
 {% spaceless %}
 
@@ -31,7 +32,7 @@
     {% block content_plain %}{% endblock %}
 {% else %}
     <div class="">
-        {% navigation_resolve_menus names='facet,list facet' sort_results=True as facet_menus_link_results %}
+        {% navigation_resolve_menus names='facet,list facet,related,sources' sort_results=True as facet_menus_link_results %}
         <div class="row zero-margin">
             <div class="col-xs-12 {% if facet_menus_link_results %}has-sidebar{% endif %}" id="viewport">
                 <div class="row zero-margin">
@@ -85,7 +86,7 @@
                 {% include 'appearance/calculate_form_title.html' %}
 
                 {# action menu #}
-                {% navigation_resolve_menus names='object,secondary,related' sort_results=True as action_menus_link_results %}
+                {% navigation_resolve_menus names='object,secondary' sort_results=True as action_menus_link_results %}
                 {% if action_menus_link_results %}
                     <div class="pull-right btn-group" id="menu-actions">
                         {% include 'appearance/partials/actions_dropdown.html' %}
@@ -101,7 +102,23 @@
                 <div id="sidebar">
                     <div class="list-group">
                         {% for menu_link_result in facet_menus_link_results %}
+                            {% if facet_menus_link_results|length > 1 %}
+                                {% if menu_link_result.menu.name not in 'facet,list facet'|split:"," %}
+                                    <li class="dropdown-header">{{ menu_link_result.menu.label }}</li>
+                                {% else %}
+                                        {% ifchanged menu_link_result.link_groups.0.object %}
+                                            {% common_get_object_verbose_name obj=menu_link_result.link_groups.0.object as link_group_object_verbose_name %}
+                                            <li class="dropdown-header">{% if link_group_object_verbose_name %}{{ link_group_object_verbose_name }}{% else %}{% trans 'Object' %}{% endif %}</li>
+                                        {% endifchanged %}
+                                {% endif %}
+                            {% else %}
+                                {% if menu_link_result.menu.name not in 'facet,list facet'|split:"," %}
+                                    <li class="dropdown-header">{{ menu_link_result.menu.label }}</li>
+                                {% endif %}
+                            {% endif %}
+
                             {% for link_group in menu_link_result.link_groups %}
+
                                 {% with link_group.links as object_navigation_links %}
                                 {% with 'true' as hide_active_anchor %}
                                 {% with 'active' as link_class_active %}
