--- a/mayan/apps/appearance/templates/appearance/calculate_form_title.html
+++ b/mayan/apps/appearance/templates/appearance/calculate_form_title.html
@@ -12,14 +12,14 @@
         </button>
 {% endif %}
 
-{% if not non_html_title and title %}
+{% if not non_html_title and result.title %}
         <div>
             <h3 id="content-title" title='{{ result.title_full }}'>
 {% endif %}
 
                 {{ result.title }}
 
-{% if not non_html_title and title %}
+{% if not non_html_title and result.title %}
             </h3>
             {% if subtitle %}
                 <p>
