Remove Dropzone upload size limit
Signed-off-by: Roberto Rosario <roberto.rosario@mayan-edms.com>

--- a/mayan/apps/sources/templates/sources/app/foot.html
+++ b/mayan/apps/sources/templates/sources/app/foot.html
@@ -60,7 +60,7 @@
                 dictFallbackText: messageFallbackText,
                 dictRemoveFile: messageRemoveFile,
                 dictResponseError: messageResponseError,
-                maxFilesize: 2048,
+                maxFilesize: null,
                 paramName: 'source-file',
                 previewTemplate: previewTemplate,
                 timeout: 1200000
