Increase width of the Dropzone error message box
Signed-off-by: Roberto Rosario <roberto.rosario@mayan-edms.com>

--- a/mayan/apps/sources/templates/sources/app/head.html
+++ b/mayan/apps/sources/templates/sources/app/head.html
@@ -19,6 +19,9 @@
     .dropzone .dz-preview .dz-error-message {
         overflow-wrap: break-word;
         padding: 1.2em;
+        top: 180px;
+        left: -40px;
+        width: 200px;
     }
 
     .dropzone .dz-preview .dz-error-message:after {
