--- a/mayan/apps/navigation/templates/navigation/generic_subnavigation.html
+++ b/mayan/apps/navigation/templates/navigation/generic_subnavigation.html
@@ -4,7 +4,7 @@
 {% if link|common_get_type == "<class 'mayan.apps.navigation.classes.Menu'>" %}
     <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="true">
-            {% if link.icon_class %}{{ link.icon_class.render }}{% endif %}
+            {% if link.icon %}{{ link.icon.render }}{% endif %}
             {{ link.label }}
             <span class="caret"></span>
         </a>
