Move impersonation markup to its own partial
Signed-off-by: Roberto Rosario <roberto.rosario@mayan-edms.com>

--- a/mayan/apps/appearance/templates/appearance/base.html
+++ b/mayan/apps/appearance/templates/appearance/base.html
@@ -2,7 +2,6 @@
 {% load static %}
 
 {% load appearance_tags %}
-{% load authentication_tags %}
 {% load common_tags %}
 {% load navigation_tags %}
 {% load smart_settings_tags %}
@@ -69,17 +68,7 @@
                             </div>
                         {% endif %}
 
-                        {% authentication_impersonation_check as impersonated_user %}
-                        {% if impersonated_user %}
-                            <div class="alert alert-warning">
-                                <p>
-                                    {% blocktrans with impersonated_user.full_name|default:impersonated_user as user %}
-                                        Impersonating user "{{ user }}".
-                                    {% endblocktrans %}
-                                    <a class="btn btn-primary" href="{% url 'authentication:impersonate_end' %}">{% trans 'Click here when finished' %}</a>
-                                </p>
-                            </div>
-                        {% endif %}
+                        {% appearance_app_templates template_name='viewport' %}
                     </div>
                 </div>
 
