--- a/mayan/apps/appearance/templates/appearance/partials/actions_dropdown.html
+++ b/mayan/apps/appearance/templates/appearance/partials/actions_dropdown.html
@@ -2,8 +2,12 @@
 
 {% load common_tags %}
 
-<button aria-expanded="false" aria-haspopup="true" class="btn btn-default btn-danger btn-sm dropdown-toggle" data-toggle="dropdown" type="button">
-    {% trans 'Actions' %}
+<button aria-expanded="false" aria-haspopup="true" class="{{ action_dropdown_classes|default:"btn btn-default btn-danger"}} btn-sm dropdown-toggle" data-toggle="dropdown" type="button">
+    {% if action_dropdown_label %}
+        {{ action_dropdown_label }}
+    {% else %}
+        {% trans 'Actions' %}
+    {% endif %}
     <span class="caret"></span>
     <span class="sr-only">{% trans 'Toggle Dropdown' %}</span>
 </button>
