Document app updates
- Allow customization of the error condition when generating document
  images. This allows displaying more icons in addition to the generic
  document image error with additional contextual information and
  popup messages explaining the actual error condition.
- Make the generation of page version source more generic and defined
  at the model.

Signed-off-by: Roberto Rosario <roberto.rosario@mayan-edms.com>

--- a/mayan/apps/appearance/templates/appearance/root.html
+++ b/mayan/apps/appearance/templates/appearance/root.html
@@ -129,7 +129,7 @@
 
             var afterBaseLoad = function () {
                 MayanImage.intialize({
-                    templateInvalidDocument: '{% spaceless %}{% include "documents/invalid_document.html" %}{% endspaceless %}'
+                    templateInvalidImage: '{% spaceless %}{% include "documents/invalid_document.html" %}{% endspaceless %}'
                 });
                 app.doToastrMessages();
                 app.resizeFullHeight();
