--- a/mayan/apps/documents/templates/documents/document_print.html
+++ b/mayan/apps/documents/templates/documents/document_print.html
@@ -2,7 +2,7 @@
 
 {% load i18n %}
 
-{% load documents_tags %}
+{% load converter_tags %}
 
 {% block title %}{{ title }}{% endblock title %}
 
@@ -10,7 +10,7 @@
     {% for page in pages %}
         <img
             alt="{% trans 'Document page image preview' %}"
-            src="{% documents_get_api_image_url page width=width height=height %}" style="width: 100%;"
+            src="{% converter_get_object_image_data.url obj=page width=width height=height %}" style="width: 100%;"
         />
     {% endfor %}
 {% endblock %}
