--- a/mayan/apps/documents/templates/documents/forms/widgets/page_image.html
+++ b/mayan/apps/documents/templates/documents/forms/widgets/page_image.html
@@ -1,7 +1,9 @@
 {% load i18n %}
 
 {% load appearance_tags %}
-{% load documents_tags %}
+{% load converter_tags %}
+
+{% converter_get_object_image_data obj=instance width=image_width height=image_height zoom=image_zoom rotation=image_rotation as object_image_data %}
 
 <span class="instance-image-widget {{ container_class }}">
     <span class="spinner-container text-primary"
@@ -12,7 +14,7 @@
     <img
         alt="{% trans 'Document image' %}"
         class="thin_border {{ image_classes }}"
-        data-url="{% documents_get_api_image_url instance width=image_width height=image_height zoom=image_zoom rotation=image_rotation %}"
+        data-url="{{ object_image_data.url }}"
         src="#"
         style="{% if image_max_height %}max-height: {{ image_max_height }}; {% endif %}"
      />
