--- a/mayan/apps/redactions/templates/redactions/cropper.html
+++ b/mayan/apps/redactions/templates/redactions/cropper.html
@@ -32,8 +32,10 @@
 {% endblock %}
 
 {% block content %}
+    {% converter_get_object_image_data.url obj=content_object maximum_layer_order=layer.order as object_image_data %}
+
     <div class="cropper-main">
-        <img id="cropper-img" src="{% converter_get_object_image_data.url obj=content_object maximum_layer_order=layer.order %}">
+        <img id="cropper-img" src="{{ object_image_data.url }}">
     </div>
 
     <br>
