--- a/mayan/apps/platform/templates/platform/supervisord_docker.tmpl
+++ b/mayan/apps/platform/templates/platform/supervisord_docker.tmpl
@@ -10,10 +10,10 @@ stdout_logfile_maxbytes = 0
 user = mayan
 
 {% for worker in workers %}
-[program:mayan-edms-worker-{{ worker.name }}]
+[program:mayan-edms-{{ worker.name }}]
 autorestart = false
 autostart = true
-command = nice -n {{ worker.nice_level }} /bin/bash -c "${MAYAN_PYTHON_BIN_DIR}celery worker -A mayan -Ofair -l ERROR -Q {% for queue in worker.queues %}{{ queue.name }}{% if not forloop.last %},{% endif %}{% endfor %} -n mayan-worker-{{ worker.name }}.%%h ${MAYAN_WORKER_{{ worker.name|upper }}_CONCURRENCY}"
+command = nice -n {{ worker.nice_level }} /bin/bash -c "${MAYAN_PYTHON_BIN_DIR}celery worker -A mayan -Ofair -l ERROR -Q {% for queue in worker.queues %}{{ queue.name }}{% if not forloop.last %},{% endif %}{% endfor %} -n mayan-worker-{{ worker.name }}.%%h ${MAYAN_{{ worker.name|upper }}_CONCURRENCY}"
 killasgroup = true
 numprocs = 1
 priority = 998
