--- a/mayan/apps/platform/templates/platform/docker_entrypoint.tmpl
+++ b/mayan/apps/platform/templates/platform/docker_entrypoint.tmpl
@@ -26,36 +26,23 @@ export MAYAN_SETTINGS_MODULE=${MAYAN_SETTINGS_MODULE:-mayan.settings.production}
 export DJANGO_SETTINGS_MODULE=${MAYAN_SETTINGS_MODULE}
 
 export MAYAN_GUNICORN_BIN=${MAYAN_PYTHON_BIN_DIR}gunicorn
-export MAYAN_GUNICORN_WORKER_CLASS=${MAYAN_GUNICORN_WORKER_CLASS:-sync}
-export MAYAN_GUNICORN_WORKERS=${MAYAN_GUNICORN_WORKERS:-2}
-export MAYAN_GUNICORN_TIMEOUT=${MAYAN_GUNICORN_TIMEOUT:-120}
+export MAYAN_GUNICORN_MAX_REQUESTS=${MAYAN_GUNICORN_MAX_REQUESTS:-{{GUNICORN_MAX_REQUESTS}}}
+export MAYAN_GUNICORN_WORKER_CLASS=${MAYAN_GUNICORN_WORKER_CLASS:-{{GUNICORN_WORKER_CLASS}}}
+export MAYAN_GUNICORN_WORKERS=${MAYAN_GUNICORN_WORKERS:-{{GUNICORN_WORKERS}}}
+export MAYAN_GUNICORN_TIMEOUT=${MAYAN_GUNICORN_TIMEOUT:-{{GUNICORN_TIMEOUT}}}
 export MAYAN_PIP_BIN=${MAYAN_PYTHON_BIN_DIR}pip
 export MAYAN_STATIC_ROOT=${MAYAN_INSTALL_DIR}/static
 
-MAYAN_WORKER_FAST_CONCURRENCY=${MAYAN_WORKER_FAST_CONCURRENCY:-0}
-MAYAN_WORKER_MEDIUM_CONCURRENCY=${MAYAN_WORKER_MEDIUM_CONCURRENCY:-0}
-MAYAN_WORKER_SLOW_CONCURRENCY=${MAYAN_WORKER_SLOW_CONCURRENCY:-1}
+{% for worker in workers %}
+MAYAN_{{ worker.name|upper }}_CONCURRENCY=${MAYAN_{{ worker.name|upper }}_CONCURRENCY:-0}
 
-if [ "$MAYAN_WORKER_FAST_CONCURRENCY" -eq 0 ]; then
-    MAYAN_WORKER_FAST_CONCURRENCY=
+if [ "$MAYAN_{{ worker.name|upper }}_CONCURRENCY" -eq 0 ]; then
+    MAYAN_{{ worker.name|upper }}_CONCURRENCY=
 else
-    MAYAN_WORKER_FAST_CONCURRENCY="${CONCURRENCY_ARGUMENT}${MAYAN_WORKER_FAST_CONCURRENCY}"
+    MAYAN_{{ worker.name|upper }}_CONCURRENCY="${CONCURRENCY_ARGUMENT}${MAYAN_{{ worker.name|upper }}_CONCURRENCY}"
 fi
-export MAYAN_WORKER_FAST_CONCURRENCY
-
-if [ "$MAYAN_WORKER_MEDIUM_CONCURRENCY" -eq 0 ]; then
-    MAYAN_WORKER_MEDIUM_CONCURRENCY=
-else
-    MAYAN_WORKER_MEDIUM_CONCURRENCY="${CONCURRENCY_ARGUMENT}${MAYAN_WORKER_MEDIUM_CONCURRENCY}"
-fi
-export MAYAN_WORKER_MEDIUM_CONCURRENCY
-
-if [ "$MAYAN_WORKER_SLOW_CONCURRENCY" -eq 0 ]; then
-    MAYAN_WORKER_SLOW_CONCURRENCY=
-else
-    MAYAN_WORKER_SLOW_CONCURRENCY="${CONCURRENCY_ARGUMENT}${MAYAN_WORKER_SLOW_CONCURRENCY}"
-fi
-export MAYAN_WORKER_SLOW_CONCURRENCY
+export MAYAN_{{ worker.name|upper }}_CONCURRENCY
+{% endfor %}
 
 if mount | grep '/dev/shm' > /dev/null; then
     MAYAN_GUNICORN_TEMPORARY_DIRECTORY="--worker-tmp-dir /dev/shm"
